# serial2mcp1

./: LICENSE  LICENSE.md  PROJECT_SUMMARY.md  README.md  requirements.txt  setup.py
doc/: 01-智能串口 MCP 工具需求规格说明书 (PRD).md  02-串口 MCP 工具接口定义契约 (Interface Schema).md  03-串口底层驱动设计规范 (Serial Driver Design Spec).md  04-系统集成与 AI 逻辑规范 (System Integration & AI Logic Spec).md  05-软件实现架构文档.md  06-软件实现架构文档 - 实现细节.md  07-项目实现计划文档.md  08-智能串口 MCP 工具AI交互提示词.md  08-智能串口 MCP 工具配置与使用方式文档.md  (+9 more)
serial2mcp/: .gitignore  pyproject.toml
serial2mcp/doc/: 01-智能串口 MCP 工具需求规格说明书 (PRD).md  07-项目实现计划文档.md  08-智能串口 MCP 工具配置与使用方式文档.md  08-智能串口MCP工具AI交互提示词.md  09-MCP串口工具使用示例.md  10-智能串口MCP工具项目总结报告.md  11-大模型交互提示词.md  12-MCP串口工具使用示例.md  13-项目总结报告.md
serial2mcp/docs/: __init__.py
serial2mcp/docs/api/: __init__.py
serial2mcp/docs/architecture/: __init__.py
serial2mcp/docs/examples/: __init__.py
serial2mcp/examples/: __init__.py  advanced_scenarios.py  basic_usage.py
serial2mcp/src/serial2mcp/: __init__.py  main.py
serial2mcp/src/serial2mcp/adapter/: converter.py  exception_handler.py  wrapper.py
serial2mcp/src/serial2mcp/driver/: __init__.py  connection_manager.py  reader.py  serial_driver.py
serial2mcp/src/serial2mcp/tools/: urc.py
serial2mcp/src/serial2mcp/utils/: logger.py
serial2mcp/tests/unit/test_adapter/: __init__.py  test_exception_handling.py
serial2mcp/tests/unit/test_driver/: test_serial_driver_concurrency.py  test_serial_driver_data_transmission.py
serial2mcp/tests/unit/test_tools/: __init__.py
serial2mcp/tests/unit/test_utils/: test_performance_metrics.py
(+33 files in other folders)
